Fix question alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -170,7 +170,9 @@ h2 {
   margin-bottom: -15%;
 
 }
-
+#question {
+  text-align: center;
+}
 .play {
 
   padding: 10px;
